--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +12,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.login-signup{
+  margin-top: 50px;
+  padding-left: 200px;
+}
+
+.login-signup button{
+  margin: 10px 0px 20px 30px;
+  display: block;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.login-signup span{
+  margin: 10px 350px 10px 10px;
+  display: block;
+  justify-content: center;
+  font-size: 25px;
+}
+
+
